# taipy-practices-apps

./: .gitignore  readme.md
book-recommendation-sys/: pyproject.toml  readme.md
book-recommendation-sys/data/data4display/: user_collection.json
book-recommendation-sys/src/be/: book-recommender.ipynb  books-recommender.ipynb
book-recommendation-sys/src/book_recommendation_sys/: main.py
book-recommendation-sys/src/fe/: main.py
budget-tracker/: README.md  main.py  pyproject.toml  spendings.json
fred-api/: app.py  data-collection.ipynb  fred-cpiaucs-m.csv  fred-gdp-q.csv  readme.md
random-cat-dog-image-sys/: main.py
refinitiv-datastream-api/: readme.md
tradingview-api-test/: README copy.md  README.md  main.py
tradingview-api-test/be/: package.json
tradingview-api-test/scraper-test/: main.py  pyproject.toml  test.py
