[tool.poetry]
name = "scraper-test"
version = "0.1.0"
description = ""
authors = ["Duc Le <dealoux@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.16.0"
pandas = "^2.1.4"
taipy-gui = "^3.0.0"
bs4 = "^0.0.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"